WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184555
[Web Animations] Fix a host of small CSS Animations and CSS Transitions issues
https://bugs.webkit.org/show_bug.cgi?id=184555
Summary
[Web Animations] Fix a host of small CSS Animations and CSS Transitions issues
Antoine Quint
Reported
2018-04-12 13:26:09 PDT
[Web Animations] Fix a host of small CSS Animations and CSS Transitions issues
Attachments
Patch
(36.42 KB, patch)
2018-04-12 13:42 PDT
,
Antoine Quint
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2018-04-12 13:42:21 PDT
Created
attachment 337831
[details]
Patch
Dean Jackson
Comment 2
2018-04-12 13:50:09 PDT
Comment on
attachment 337831
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=337831&action=review
> Source/WebCore/animation/CSSAnimation.cpp:34 > +Ref<CSSAnimation> CSSAnimation::create(Element& target, const Animation& backingAnimation, const RenderStyle* oldStyle, const RenderStyle& newStyle)
Why is one a pointer? Can oldStyle be null?
Antoine Quint
Comment 3
2018-04-12 13:50:54 PDT
(In reply to Dean Jackson from
comment #2
)
> Comment on
attachment 337831
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=337831&action=review
> > > Source/WebCore/animation/CSSAnimation.cpp:34 > > +Ref<CSSAnimation> CSSAnimation::create(Element& target, const Animation& backingAnimation, const RenderStyle* oldStyle, const RenderStyle& newStyle) > > Why is one a pointer? Can oldStyle be null?
Yes! This could be the initial style resolution.
Antoine Quint
Comment 4
2018-04-12 14:26:04 PDT
Committed
r230595
: <
https://trac.webkit.org/changeset/230595
>
Radar WebKit Bug Importer
Comment 5
2018-04-12 14:27:37 PDT
<
rdar://problem/39393992
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug